--- a/views/partials/garage-item-info.handlebars
+++ b/views/partials/garage-item-info.handlebars
@@ -19,5 +19,6 @@
   <div class="card-body row">
   
   
-   
+   <img id="item-pic" src="/images/{{name}}.jpg" alt="{{name}}">
+
     <div class="col-8">
