--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Yard-Sale</title>
 </head>
 <body>
-    {{{body}}}
-</body>
+    <div class="wrapper">
+      <header>
+        <h1>
+          <a href="/">Yard-Sale</a>
+        </h1>
+        <nav>
+          {{!-- {{#if loggedIn}} --}}
+          {{!-- <a href="/dashboard">dashboard</a> --}}
+            {{!-- <button id="logout" class="btn-no-style">logout</button> --}}
+          {{!-- {{else}} --}}
+            <a href="/login">login</a>
+          {{!-- {{/if}} --}}
+        </nav>
+      </header>
+      <main>
+        {{{body}}}
+      </main>
+      <footer>
+        Thanks for visiting!
+      </footer>
+    </div>
+    {{!-- {{#if loggedIn}}
+      <script src="/javascript/logout.js"></script>
+    {{/if}} --}}
+  </body>
 </html>
