signup and logout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,10 @@
       <h1>
         <a href="/">Yard Sale</a>
       </h1>
+      <nav>
+        <button id="logout" class="btn-no-style">logout</button>
+        <a href="/login">login</a>
+     </nav>
     </header>
     <main>
       {{{ body }}}
@@ -22,6 +26,8 @@
       Buy and sell items with people in your neighbourhood!
     </footer>
   </div>
+
+    <script src="/javascript/logout.js"></script>
 
 </body>
 
