re-added the code that was commented out

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
         Thanks for visiting!
       </footer>
     </div>
-    {{!-- {{#if loggedIn}}
+    {{ {{#if loggedIn}}
       <script src="/javascript/logout.js"></script>
     {{/if}} --}}
   </body>
