--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,21 +9,31 @@ html {
     margin: 0;
     font-family: sans-serif;
     color: #333;
+   
 }
 
+header {
+    font-size: 20px;
+}
+
+.logo {
+    font-size: 40px;
+    text-align: center;
+}
 a {
     text-decoration: none;
-    color: #225ca3;
+    color: #355c7d;
     font-weight: bold;
     transition: color .1s;
+    padding: 10px;
 }
 
 a:hover {
-    color: #3486eb;
+    color: #355c7d;
 }
 
 button {
-    background-color: #225ca3;
+    background-color: #355c7d;
     border: 0;
     padding: 1%;
     color: white;
@@ -40,6 +50,23 @@ button:hover {
 .post-list {
     margin: 0;
     padding: 0;
+   
+  }
+
+  .post-list li {
+      list-style-type: none;
+  }
+
+.post {
+    border: solid #355c7d;
+    padding-left: 20px;
+    border-radius: 25px;
+
+}
+
+.new-item {
+    text-align: center;
+    border:solid #333;
 }
 
 textarea,
@@ -75,6 +102,7 @@ form label {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    background-color: #F8B195;
 }
 
 header {
@@ -83,6 +111,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0 1%;
+    background-color: #F67280;
 }
 
 header h1 {
@@ -177,5 +206,13 @@ footer {
     display: flex;
     justify-content: center;
     padding: 1%;
-    font-size: 110%;
+    font-size: 150%;
+    color: #355c7d;
+    font-weight: bold;
+
+}
+
+.picture img {
+    max-width: 20%;
+    max-height: 20%;
 }
