--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,19 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Just Tech News</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
   <div class="wrapper">
     <header>
-      <h1>
-        <a href="/">Yard Sale</a>
-      </h1>
+      <div class="logo">
+            <h1>
+              <a  href="/">Yard Sale</a>
+            </h1>
+         
+      </div>
+    
 
       <nav>
-          <button id="logout" class="btn-no-style">logout</button>
-        <a href="/login">login</a>
+    
+         <button id="logout" class="btn-no-style">logout</button>
+     
+         <a href="/login">login</a>
+        
+       
      </nav>
 
     </header>
