--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -7,32 +7,10 @@
         
       </div>
       <div class="meta">
-        By {{post.user.username}} on {{post.created_at}}
+        By {{post.user.username}} on {{format_date post.created_at}}
         |
         <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
       </div>
 
-      <form class="comment-form">
-  <div>
-    <textarea name="comment-body"></textarea>
-  </div>
-
-  <div>
-    <button type="submit">add comment</button>
-    <button type="button" class="upvote-btn">upvote</button>
-  </div>
-</form>
-
-<div class="comments">
-  {{#each post.comments}}
-  <section class="comment">
-    <div class="meta">
-      {{user.username}} on {{created_at}}
-    </div>
-    <div class="text">
-      {{comment_text}}
-    </div>
-  </section>
-  {{/each}}
-</div>
+      
     </article>
