--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,4 @@
+<button id="newitembtn">Add</button>
 <ol class="post-list">
       {{#each posts as |post|}}
   <li>
@@ -11,10 +12,14 @@
       </div>
       <div class="meta">
         By {{post.user.username}} on {{post.created_at}}
-        |
-        <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
+        {{!-- <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a> --}}
       </div>
     </article>
   </li>
     {{/each}}
 </ol>
+<script type="text/javascript">
+    document.getElementById("newitembtn").onclick = function () {
+        location.href = "/newitem";
+    };
+</script>
