ade some edits to the buttons on the css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,7 +10,7 @@ html {
     margin: 0;
     font-family: sans-serif;
     color: #333;
-    background-image: radial-gradient(circle, #033f8d 0%, #00d4ff 100%);
+    background-image: radial-gradient(circle, #5799ef 0%, #00d4ff 100%);
 
 }
 
@@ -116,9 +116,23 @@ header h1 {
     background-color: #d41414;
 }
 
-.delete-post-btn:hover {
-    background-color: #ff643d;
-}
+.delet-post-btn{
+    color: rgb(255, 255, 255); font-size: 16px; 
+    line-height: 16px;
+     padding: 6px; 
+     border-radius: 
+     10px; font-family: Georgia, serif; font-weight: normal; 
+     text-decoration: none; 
+     font-style: normal; 
+     font-variant: normal; 
+     text-transform: none;
+      background-image: linear-gradient(to right, rgb(164, 28, 28) 0%, rgb(201, 115, 34) 50%, rgb(255, 98, 0) 100%); box-shadow: rgb(0, 0, 0) 5px 5px 15px 5px; border: 2px solid rgb(250, 35, 78); display: inline-block;}
+   
+    .delet-post-button:hover {
+    background: #1C6EA4; }
+  
+    .delete-post-btn:active {background: #144E75; }
+
 
 .post {
     margin-bottom: 2%;
