--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -25,27 +25,9 @@
 
  
 
-    <form class="new-item-form">
-      <h3>List an item to sell to people in your neighbourhood!</h3>
-        <div>
-          <label for="title">What do you have for sale?</label>
-          <input type="text" name="title" id="title">
-        </div>
-         <div>
-          <label for="post-description">Describe the item ... </label>
-        <textarea id="post-description" name="post-description" rows="4" cols="33"></textarea>
-        </div>
-        <div>
-          <label for="post-price">How much?</label>
-          <input type="number" name="post-price" id="post-price">
-        </div>
-        <div>
-           <button type="submit">Submit item for sale!</button>
-        </div>
-          
-    </form>
+    <p>add text</p>
   </div> 
 </div>
  
 
-<script src="/javascript/newItem.js"></script>
+ 
