--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,6 +25,7 @@
          <button id="logout" class="btn-no-style">logout</button>
      
          <a href="/login">login</a>
+           <a href="/newitem">Post a new item for sale!</a>
         
        
      </nav>
