--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,6 +37,7 @@
       <nav>
         {{#if loggedIn}}
           <button id="logout" class="btn-no-style">Logout</button>
+            <a href="/newitem">Add a new item to sell!</a>
           {{else}}
         <a href="/login">Login / Sign Up</a>
         {{/if}}
