--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,25 +1,39 @@
-<button id="newitembtn">Add</button>
-<ol class="post-list">
+
+
+<div class="row">
+  <div class="col-sm-9">
+    <ol class="post-list">
       {{#each posts as |post|}}
-  <li>
+    <li>
     <article class="post">
       <div class="title">
+        Posted on {{format_date post.created_at}}
        <h3>{{post.title}}</h3>
-       <p>{{post.post_description}}</p>
-       <p>${{post.post_price}}</p>
-       <p>Category: {{post.category_name}}</p> 
-        
+       <p><em>{{post.post_description}}</em></p>
+       <p><strong>Price:</strong> ${{post.post_price}}</p>
+     
       </div>
       <div class="meta">
-        By {{post.user.username}} on {{post.created_at}}
-        {{!-- <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a> --}}
+        <strong>Contact</strong><a href="mailto:{{post.user.email}}">{{post.user.email}}</a>
       </div>
+  
     </article>
   </li>
     {{/each}}
 </ol>
+
+  </div>
+  <div class="col-sm-3">
+
+ <button id="newitembtn">Add a new item for sale!</button>
+
+    <p>add text</p>
+  </div> 
+</div>
+
 <script type="text/javascript">
     document.getElementById("newitembtn").onclick = function () {
         location.href = "/newitem";
     };
 </script>
+
