--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,5 +1,6 @@
 
-<div  style="width: 100%; height: auto;">
+
+<div  style="width: 100%; height: 80vh; display:flex; align-items:center; justify-content:center;">
 
 <svg id="my-svg" width="562" height="348" viewBox="0 0 562 348" fill="yellow" xmlns="http://www.w3.org/2000/svg">
 <path d="M0.5 0.5H561.5V347.5H0.5V0.5Z" fill="red" stroke="black"/>
