--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,5 @@
-<button id="newitembtn">Add</button>
+
+<button id="newitembtn" style="width: 100px; margin-left:-20px">Add Item</button>
 <ol class="post-list">
       {{#each posts as |post|}}
   <li>
