--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,7 +49,7 @@
      </nav>
 
     </header>
-    <main style="padding-bottom: 50px;">
+    <main style="padding-bottom: 50px; padding-top: 20px; margin: 0px 20px;">
       {{{ body }}}
     </main>
     <footer>
