--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,9 @@
-<form class="login-form">
+ <div class="row">
+    <div class="col">
+      <div>
+        <h2>Login</h2>
+      </div>
+      <form class="login-form">
   <div>
     <label for="email-login">email:</label>
     <input type="text" id="email-login" />
@@ -12,7 +17,15 @@
   </div>
 </form>
 
-<form class="signup-form">
+
+    
+    </div>
+    <div class="col">
+        <div>
+        <h2>Sign up</h2>
+      </div>
+    
+      <form class="signup-form">
   <div>
     <label for="username-signup">username:</label>
     <input type="text" id="username-signup" />
@@ -29,6 +42,13 @@
     <button type="submit">signup</button>
   </div>
 </form>
+
+
+    </div>
+  </div>
+
+
+
 
 <script src="/javascript/login.js"></script>
 
