--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 
 
 <div class="row">
-  <div class="col-sm-9">
+  <div class="col-sm-8">
     <ol class="post-list">
       {{#each posts as |post|}}
     <li>
@@ -14,7 +14,7 @@
      
       </div>
       <div class="meta">
-        <strong>Contact</strong><a href="mailto:{{post.user.email}}">{{post.user.email}}</a>
+        <strong>Contact</strong>  <a href="mailto:{{post.user.email}}">{{post.user.email}}</a>
       </div>
   
     </article>
@@ -23,11 +23,15 @@
 </ol>
 
   </div>
-  <div class="col-sm-3">
+  <div class="col-sm-4 left" >
 
  <button id="newitembtn">Add a new item for sale!</button>
 
-    <p>add text</p>
+    <p>Buy and sell gently used items with people in your neighbourhood.</p>
+
+    <div>
+   <img src="https://images.unsplash.com/photo-1618990908950-fd1a23294d11?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8bmVpZ2hib3Job29kfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" >
+    </div>
   </div> 
 </div>
 
